Make dice roller a little prettier.

--- a/⚂/index.html
+++ b/⚂/index.html
@@ -14,7 +14,7 @@
 		<div id=content>
 			<div id=header>
 				<h1>Dice Roller</h1>
-				<sub>Multiplayer DnD Dice Simulator</sub>
+				<sub>Multiplayer DnD Dice Roller</sub>
 			</div>
 			<div id=app>
 				<label>
@@ -24,7 +24,7 @@
 				<form id=roll-entry>
 					<label for=game>Game Name:</label> <input id=game>
 					<label for=name>Character Name:</label> <input id=name>
-					<label for=roll>Roll:</label> <input id=roll disabled autocomplete=off>
+					<label for=roll>Roll:</label> <input id=roll disabled autocomplete=off placeholder="Connecting…">
 					<button disabled title="Disabled; can not contact roll server.">roll</button>
 					<p>(eg.; <code>2d10 + 1 to hit</code>)</p>
 				</form>
