Try to hint heart character on dice roller page is emoji.

--- a/⚂/index.html
+++ b/⚂/index.html
@@ -38,7 +38,7 @@
 		</div>
 		<div id=status>
 			<div>Status: <span>loading…</span></div>
-			<p>Based on <a href="https://github.com/GreenImp">GreenImp's</a> <a href="https://github.com/GreenImp/rpg-dice-roller">RPG Dice Roller</a>. ❤</p>
+			<p>Based on <a href="https://github.com/GreenImp">GreenImp's</a> <a href="https://github.com/GreenImp/rpg-dice-roller">RPG Dice Roller</a>. ️❤</p>
 		</div>
 	</body>
 </html>
