Tweaks to dice roller header.

--- a/⚂/index.html
+++ b/⚂/index.html
@@ -14,7 +14,7 @@
 		<div id=content>
 			<div id=header>
 				<h1>Dice Roller</h1>
-				<sub>Multiplayer DnD Dice Roller</sub>
+				<sub>Multiplayer DnD Roll Bot</sub>
 			</div>
 			<div id=app>
 				<label>
