Dice Roller: Added metadata for (hopefully) nice embedding.

--- a/⚂/index.html
+++ b/⚂/index.html
@@ -2,9 +2,27 @@
 <html lang="en-IE">
 	<head>
 		<meta charset='utf-8'>
-		<title>Dice Roller</title>
+		<title>Dice Roller</title>		
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 		<meta name="theme-color" content="#614c35">
+		
+		<meta property="og:title"        content="DDR's Accessible Dice Roller" />
+		<meta name="twitter:title"       content="DDR's Accessible Dice Roller" />
+		<meta property="og:type"         content="website" />
+		<meta property="twitter:domain"  content="ddr0.ca" />
+		<meta property="og:url"          content="https://ddr0.ca/🎲" />
+		<meta property="twitter:url"     content="https://ddr0.ca/🎲" />
+		<meta property="og:image"        content="https://ddr0.ca/⚂/open_graph_image.jpeg" />
+		<meta name="twitter:image"       content="https://ddr0.ca/⚂/open_graph_image.jpeg" />
+		<meta property="og:image:type"   content="image/jpeg" />
+		<meta property="og:image:width"  content="601" />
+		<meta property="og:image:height" content="379" />
+		<meta property="og:image:alt"    content="Dice Roller — Multiplayer DnD Roll Bot" />
+		<meta name="description"         content="Roll game dice like &quot;1d20 + 5 to hit&quot;. Shared history, screen-reader friendly, read-aloud option. Free & open-source!" />
+		<meta property="og:description"  content="Roll game dice like &quot;1d20 + 5 to hit&quot;. Shared history, screen-reader friendly, read-aloud option. Free & open-source!" />
+		<meta name="twitter:description" content="Roll game dice like &quot;1d20 + 5 to hit&quot;. Shared history, screen-reader friendly, read-aloud option. Free & open-source!" />
+		<meta property="og:locale"       content="en_CA" />
+		
 		<script src="/⚂/ws/socket.io.js"></script>
 		<script src="/⚂/index.js"></script>
 		<link href="/⚂/index.css" rel="stylesheet">
